--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-4 sticky-lg-top vh-100">
                     <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
                         <img class="w-100 img-fluid mb-4" src="img/profile.jpg" alt="Image">
-                        <h1 class="text-primary mt-2">Adan Barnett</h1>
+                        <h1 class="text-primary mt-2">Saika Kisami</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
                             <div class="typed-text d-none"> Web Developer, Web Designer, Front End Developer, Machine Engineer, Blockchain Developer, Full Stack Developer, Graphic designer, Apps Designer, Apps Developer</div>
@@ -69,32 +69,32 @@
                         <p>Highly skilled web developer with over 9 years of experience creating user interfaces, testing, debugging, training employees and optimizing web functionality that improves data retrieval and workflow efficiencies. 
                             Conceived and developed about 1500+ user-friendly responsive websites with high proficiency.
                             Proven ability to work collaboratively with cross-functional teams to deliver high-quality products on time and within budget. Seeking a challenging position in web development.</p>
-                        <div class="row mb-4">
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Name:</span> Adan Barnett
+                            <div class="row mb-4">
+                                <div class="col-sm-6 py-1">
+                                    <span class="fw-medium text-primary">Name:</span> Saika Kisami
+                                </div>
+                                <div class="col-sm-6 py-1">
+                                    <span class="fw-medium text-primary">Birthday:</span> 14 January 1990
+                                </div>
+                                <div class="col-sm-6 py-1">
+                                    <span class="fw-medium text-primary">Degree:</span> Bachelor
+                                </div>
+                                <div class="col-sm-6 py-1">
+                                    <span class="fw-medium text-primary">Experience:</span> 9 Years
+                                </div>
+                                <div class="col-sm-6 py-1">
+                                    <span class="fw-medium text-primary">Phone:</span> +1 773 828 4391
+                                </div>
+                                <div class="col-sm-6 py-1">
+                                    <span class="fw-medium text-primary">Email:</span> adanbarnett114@gmail.com
+                                </div>
+                                <div class="col-sm-6 py-1">
+                                    <span class="fw-medium text-primary">Address:</span> Kenedy Texas US
+                                </div>
+                                <div class="col-sm-6 py-1">
+                                    <span class="fw-medium text-primary">Freelance:</span> Available
+                                </div>
                             </div>
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Birthday:</span> 14 January 1991
-                            </div>
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Degree:</span> Bachelor
-                            </div>
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Experience:</span> 9 Years
-                            </div>
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Phone:</span> +1 773 828 4391
-                            </div>
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Email:</span> adanbarnett114@gmail.com
-                            </div>
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Address:</span> 76 avenue du Marechal Juin Saint-louis City, Alsace, France
-                            </div>
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Freelance:</span> Available
-                            </div>
-                        </div>
                         <div class="row g-4">
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
@@ -269,7 +269,25 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Photoshop</p>
+                                        <p class="mb-2">Nuxt.js</p>
+                                        <p class="mb-2">85%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">Next.js</p>
+                                        <p class="mb-2">95%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">Unity</p>
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
@@ -326,6 +344,15 @@
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
                                         <p class="mb-2">React.Native</p>
+                                        <p class="mb-2">85%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">MongoDB</p>
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
@@ -397,7 +424,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Animation</p>
+                                        <p class="mb-2">Spring Boot</p>
                                         <p class="mb-2">90%</p>
                                     </div>
                                     <div class="progress">
@@ -406,7 +433,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">AutoCAD</p>
+                                        <p class="mb-2">Web3</p>
                                         <p class="mb-2">90%</p>
                                     </div>
                                     <div class="progress">
@@ -415,11 +442,20 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Solidworks</p>
+                                        <p class="mb-2">Golang</p>
+                                        <p class="mb-2">80%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">Three.js</p>
                                         <p class="mb-2">90%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
