--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <met#aeb3b8et="utf-8">
-        <title>Adan</title>
+        <title>Saika</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Adan Portfolio" name="keywords">
-        <meta content="Adan Portfolio" name="description">
+        <meta content="Saika Portfolio" name="keywords">
+        <meta content="Saika Portfolio" name="description">
 
         <!-- Favicon   -->
         <link href="img/favicon.ico" rel="icon">
