--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Three.js</p>
+                                        <p class="mb-2">Elementor</p>
                                         <p class="mb-2">90%</p>
                                     </div>
                                     <div class="progress">
@@ -469,22 +469,22 @@
                         <div class="border-start border-2 border-light pt-2 ps-5">
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Full-stack Developer</h5>
+                                <h5 class="mb-1">Senior CMS Developer</h5>
                                 <p class="mb-2">UO solutions Agency | <small>2020 - 2022</small></p>
-                                <p>-Prepared complex user interfaces and data interactions within a strict deadline in collaboration with 20+ designers and 50+ developers.</br>
-                                -Established and managed SharePoint permissions across 50+ clients, app, and sites in the first month of joining the team.</br>
-                                -Developed and maintained 18 web applications using modern full-stack frameworks such as MEAN (MongoDB, Express, Angular, Node.js) and MERN (MongoDB, Express, React, Node.js) while I was a employer in the agency.</br>
-                                -Designed and developed applications for use within the company to improve efficiency and reduce paper waste.</p>
+                                <p>-Developed custom extensions for a variety of WordPress, Shopify eCommerce platforms, including WooCommerce, Easy Digital Downloads, WC Vendors Marketplace, and Dokan.</br>
+                                -Authored a half dozen high-quality software solutions for online marketplaces built on WordPress and Shopify .</br>
+                                -Helped over a dozen online marketplaces to build and customize their websites.</br>
+                                -•Created a new online storefront for selling our digital products, helping to boost sales by nearly 25%.</p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Senior WordPress Developer</h5>
-                                <p class="mb-2">Soft Company | <small>2018 - 2020</small></p>
-                                <p>-Led a team of designers and developers to deliver custom WordPress solutions for diverse clients.</br>
-                                    -Translated client requirements into responsive and visually engaging websites utilizing HTML, CSS, JavaScript, and PHP.</br>
-                                    -Developed 20+ custom WordPress themes and plugins to enhance functionality and meet specific project needs.</br>
-                                    -Collaborated closely with clients to understand their goals, provided expert guidance, and ensured timely project completion.</br>
-                                    -Optimized website performance through efficient coding practices, caching techniques, and performance analysis</p>
+                                <h5 class="mb-1">Senior WordPress and Shopify Developer</h5>
+                                <p class="mb-2">UO solutions Agency | <small>2017 - 2020</small></p>
+                                <p>-Developed WordPress and Shopify websites, themes, and custom plugins for various clients.</br>
+                                    -Developed and consulted on a B2B web app, Bitsy Advisor.</br>
+                                    -Wrote an article for the Toptal Engineering blog about creating a CI/CD workflow with WordPress, Shopify and Webflow.</br>
+                                    -Participated in various professional development offerings within and outside of Toptal.</br>
+                                    -Participated in several Toptal internal studies to help improve the platform member experience.</p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
